@@ -10,7 +10,7 @@
 
 <!--
 
-$Id: guestoses.html,v 1.230 2007-09-11 21:46:35 debug Exp $
+$Id: guestoses.html,v 1.231 2007-09-13 19:24:07 debug Exp $
 
 Copyright (C) 2003-2007  Anders Gavare.  All rights reserved.
 
@@ -66,6 +66,7 @@ SUCH DAMAGE.
   <li><a href="#openbsdpmaxinstall">OpenBSD/pmax 2.8-BETA</a>
   <li><a href="#openbsdcatsinstall">OpenBSD/cats 4.0</a>
   <li><a href="#openbsdlandiskinstall">OpenBSD/landisk 4.1</a>
+  <li><a href="#helenos">HelenOS 0.2.0.5</a>
   <li><a href="#ultrixinstall">Ultrix/RISC 4.5</a>
   <li><a href="#sprite">Sprite for DECstation</a>
   <li><a href="#declinux">Debian GNU/Linux for DECstation</a>
@@ -1571,6 +1572,47 @@ boot from the disk image:
 not emulated yet. If you want to transfer files to/from the emulated 
 landisk machine, see 
 <a href="misc.html#filexfer">this chapter</a> in the documentation.
+
+
+
+
+
+
+
+
+
+<p><br>
+<a name="helenos"></a>
+<h3>HelenOS:</h3>
+
+<a href="http://www.helenos.eu/">HelenOS</a> can run in GXemul's
+<tt>testarm</tt> and <tt>testmips</tt> machine modes.
+
+<p>To run HelenOS for ARM in GXemul:
+<ol>
+  <li>Download the HelenOS kernel:<pre>
+	<a href="http://www.helenos.eu/releases/HelenOS-0.2.0.5-arm32-gxemul.boot">http://www.helenos.eu/releases/HelenOS-0.2.0.5-arm32-gxemul.boot</a>
+  </pre>
+  <li>Start GXemul using the following command line:<pre>
+  	<b>gxemul -X -E testarm HelenOS-0.2.0.5-arm32-gxemul.boot</b>
+  </pre>
+</ol>
+
+<p>To run HelenOS for MIPS in GXemul:
+<ol>
+  <li>Download the HelenOS kernel:<pre>
+	<a href="http://www.helenos.eu/releases/HelenOS-0.2.0.5-mips32-gxemul.boot">http://www.helenos.eu/releases/HelenOS-0.2.0.5-mips32-gxemul.boot</a>
+  </pre>
+  <li>Start GXemul using the following command line:<pre>
+  	<b>gxemul -X -E testmips -C 5Kc HelenOS-0.2.0.5-mips32-gxemul.boot</b>
+  </pre>
+	(Note the <tt>-C 5Kc</tt> option.)
+</ol>
+
+<p>Once the kernel has booted, you can press e.g. F2 to get to the
+Tetris task, or F12 to enter the kernel console.
+
+
 
 
 
