@@ -10,7 +10,7 @@
 
 <!--
 
-$Id: index.html,v 1.280 2007-06-28 15:20:16 debug Exp $
+$Id: index.html,v 1.281 2007-09-13 19:24:07 debug Exp $
 
 Copyright (C) 2003-2007  Anders Gavare.  All rights reserved.
 
@@ -78,6 +78,7 @@ SUCH DAMAGE.
     <li><a href="guestoses.html#openbsdpmaxinstall">OpenBSD/pmax</a> 
     <li><a href="guestoses.html#openbsdcatsinstall">OpenBSD/cats</a>
     <li><a href="guestoses.html#openbsdlandiskinstall">OpenBSD/landisk</a>
+    <li><a href="guestoses.html#helenos">HelenOS</a>
     <li><a href="guestoses.html#ultrixinstall">Ultrix/RISC</a>   
     <li><a href="guestoses.html#sprite">Sprite for DECstation</a>   
     <li><a href="guestoses.html#declinux">Debian GNU/Linux for DECstation</a>
